add some fields to form
